--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #14878E;
+  background-image: url("./components/global/img/flat-compressor.jpg");
 }
 
 .App-logo {
